アカウント登録APIを追加する
