# config/routes/api_v1.rb
@@ -1,8 +1,12 @@
 Rails.application.routes.draw do
-  namespace :api do
+  namespace :api, defaults: { format: :json }do
     namespace :v1 do
-      devise_for :accounts
       resources :health_check, only: [ :index ]
+      devise_for :accounts,
+        path: 'accounts',
+        controllers: {
+          registrations: 'api/v1/accounts/registrations'
+        }
     end
   end
 end
